--- a/.github/workflows/continuous-deployment.yml
+++ b/.github/workflows/continuous-deployment.yml
@@ -21,17 +21,16 @@ jobs:
         with:
           node-version: 16
           cache: yarn
-          registry-url: https://registry.yarnpkg.com/
       - name: Install Dependencies
         run: yarn --immutable
       - name: Build package
         run: yarn build
       - name: Bump Version
         run: yarn start --preid "next.$(git rev-parse --verify --short HEAD)" -v
-      - name: Publish to GitHub
+      - name: Publish to NPM
         run: |
           yarn config set npmAuthToken ${NODE_AUTH_TOKEN}
-          yarn config set npmPublishRegistry "https://npm.pkg.github.com"
+          yarn config set npmPublishRegistry "https://registry.npmjs.org/"
           yarn npm publish --tag next
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
