--- a/.github/workflows/npm-release.yml
+++ b/.github/workflows/npm-release.yml
@@ -7,27 +7,26 @@ on:
 
 jobs:
   Publish:
-    name: Publish to GitHub Package Registry
+    name: Publish to NPM on Release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Project
         uses: actions/checkout@dcd71f646680f2efd8db4afa5ad64fdcba30e748 # tag=v3
         with:
           fetch-depth: 0
-      - name: Use Node.js v16 with GitHub Package Registry
+      - name: Use Node.js v16
         uses: actions/setup-node@56337c425554a6be30cdef71bf441f15be286854 # tag=v3
         with:
           node-version: 16
           cache: yarn
-          registry-url: https://registry.yarnpkg.com/
+          registry-url: https://registry.npmjs.org/
       - name: Install Dependencies
         run: yarn --immutable
       - name: Build package
         run: yarn build
-      - name: Publish to GitHub
+      - name: Publish to NPM
         run: |
           yarn config set npmAuthToken ${NODE_AUTH_TOKEN}
-          yarn config set npmPublishRegistry "https://npm.pkg.github.com"
           yarn npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
