--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
     "@favware/cliff-jumper": "^1.3.1",
+    "@favware/npm-deprecate": "^1.0.4",
     "@sapphire/eslint-config": "^4.3.4",
     "@sapphire/prettier-config": "^1.4.3",
     "@sapphire/ts-config": "^3.3.4",
