--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -7,6 +7,7 @@
     "preserveConstEnums": true,
     "baseUrl": ".",
     "paths": {
+      "#functions/*": ["./functions/*"],
       "#lib/*": ["./lib/*"]
     }
   },
