chore(ci): release on tag push

--- a/.github/workflows/npm-release.yml
+++ b/.github/workflows/npm-release.yml
@@ -1,9 +1,9 @@
-name: Publish package to GitHub Package Registry
+name: Publish package to NPM
 
 on:
-  release:
-    types:
-      - published
+  push:
+    tags:
+      - 'v*'
 
 jobs:
   Publish:
